--- a/public/index.css
+++ b/public/index.css
@@ -25,3 +25,21 @@
         transform: translateY(-150%);
     }
 }
+
+/* Scrollbar Styles */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: black;
+}
+
+::-webkit-scrollbar-thumb {
+    background: black;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #434343;
+}
